created 3 JS files

--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+  <script src="./dist/home.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
   </div>
   <a href="http://localhost:8080/api/v1/waitlist">Waitlist</a> <a href="http://localhost:8080/api/v1/reservations">Reservation</a>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     $("#search-btn").on("click", function () {
       var searchedCharacter = $("#character-search").val().trim();
 
@@ -57,7 +57,7 @@
         }
       });
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
