--- a/public/add.html
+++ b/public/add.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+  <script src="./dist/add.js"></script>
 </head>
 <body>
 
@@ -70,7 +70,7 @@
     </div>
   </div>
   <a href="http://localhost:8080/api/v1/waitlist">Waitlist</a> <a href="http://localhost:8080/api/v1/reservations">Reservation</a>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     // Question: What does this code do?
     $("#add-btn").on("click", function(event) {
       event.preventDefault();
@@ -88,7 +88,7 @@
           alert("Adding character...");
         });
     });
-  </script>
+  </script> -->
 
 </body>
 </html>
